--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,10 @@
 @import "base/variables";
+@import "base/mixins";
 @import "reset";
-
-/* @import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"); */
+@import "global";
+@import "header";
+@import "footer";
+@import "home";
+@import "category";
+@import "wallet";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
