--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -214,7 +214,7 @@ html {
   border: 1px solid #f6f9fc;
   border-radius: 14px;
   box-shadow: 0 17px 14px -10px rgba(0, 0, 0, 0.05);
-  background: #fff;
+  background-color: #fff;
 
   h2 {
     margin: 0;
