--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -56,7 +56,7 @@
   border: 1px solid #f6f9fc;
   border-radius: 14px;
   box-shadow: 0 17px 14px -10px rgba(0, 0, 0, 0.05);
-  background: #fff;
+  background-color: #fff;
 
   input {
     position: absolute;
