--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -42,6 +42,16 @@ html {
     font-size: 28px;
     line-height: 34px;
     text-align: center;
+
+    @include m($lg) {
+      font-size: 26px;
+      line-height: 32px;
+    }
+
+    @include m($md) {
+      font-size: 20px;
+      line-height: 30px;
+    }
   }
 
   &__box {
@@ -56,11 +66,25 @@ html {
       line-height: 30px;
       text-align: center;
       color: #97a4ba;
+
+      @include m($lg) {
+        font-size: 16px;
+        line-height: 24px;
+      }
+
+      @include m($md) {
+        font-size: 14px;
+        line-height: 20px;
+      }
     }
 
     a {
       margin-left: 6px;
       color: #00e1d4;
+
+      @include m($md) {
+        margin-left: 5px;
+      }
     }
   }
 }
@@ -104,11 +128,17 @@ html {
 }
 
 .result {
+  margin: -117px auto 72px !important;
+
   h3 {
     margin-bottom: 16px !important;
 
     &:last-of-type {
       margin-top: 32px;
+
+      @include m($lg) {
+        margin-top: 24px;
+      }
     }
   }
 
@@ -118,6 +148,10 @@ html {
         display: none;
       }
     }
+  }
+
+  @include m($lg) {
+    padding: 20px 24px !important;
   }
 }
 
@@ -131,6 +165,14 @@ html {
     font-size: 28px;
     line-height: 36px;
     text-align: center;
+
+    @include m($lg) {
+      font-size: 26px;
+    }
+
+    @include m($md) {
+      font-size: 24px;
+    }
   }
 
   label {
@@ -151,6 +193,15 @@ html {
     background-color: transparent;
     transform: translateY(-50%);
     cursor: pointer;
+
+    @include m($lg) {
+      left: 22px;
+    }
+
+    @include m($md) {
+      width: 20px;
+      height: 20px;
+    }
   }
 
   input {
@@ -172,6 +223,22 @@ html {
       font-size: 18px;
       line-height: 26px;
       color: #97a4ba;
+
+      @include m($lg) {
+        font-size: 16px;
+        line-height: 24px;
+      }
+    }
+
+    @include m($lg) {
+      padding-left: 60px;
+      height: 49px;
+      font-size: 16px;
+      line-height: 24px;
+    }
+
+    @include m($md) {
+      height: 44px;
     }
   }
 
@@ -203,12 +270,30 @@ html {
       letter-spacing: -0.01em;
     }
   }
+
+  @include m($lg) {
+    padding: 40px 0 63px;
+  }
+}
+
+.result-search {
+  padding: 40px 0 93px;
+
+  label {
+    margin-bottom: 16px;
+  }
+}
+
+.lines {
+  height: 24px;
+  background-image: linear-gradient(180deg, #fff 0%, #f6f9fc 100%);
 }
 
 .not-found {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 16px;
   width: 100%;
   height: 78px;
   border: 1px solid #f6f9fc;
@@ -223,5 +308,23 @@ html {
     line-height: 30px;
     text-align: center;
     color: #000;
+
+    @include m($lg) {
+      font-size: 18px;
+      line-height: 28px;
+    }
+
+    @include m($md) {
+      font-size: 16px;
+      line-height: 24px;
+    }
+  }
+
+  @include m($lg) {
+    height: 60px;
+  }
+
+  @include m($md) {
+    height: 48px;
   }
 }
