--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,5 +6,5 @@
 @import "footer";
 @import "home";
 @import "category";
-@import "wallet";
+@import "create";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
