--- a/scss/_create.scss
+++ b/scss/_create.scss
@@ -1,9 +1,12 @@
-.create {
+.article-wrap {
   margin: -37px auto 72px;
   padding: 40px 48px;
   border: 1px solid #f6f9fc;
   border-radius: 14px;
   box-shadow: 0 17px 14px -10px rgba(0, 0, 0, 0.05);
+  font-size: 16px;
+  line-height: 24px;
+  color: #303030;
   background-color: #fff;
 
   h2 {
@@ -24,12 +27,48 @@
     }
   }
 
+  ul {
+    margin-bottom: 16px;
+
+    li {
+      position: relative;
+      padding-left: 10px;
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 50%;
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+        background-color: #00e1d4;
+        transform: translateY(-50%);
+      }
+    }
+  }
+
+  img {
+    margin: 0 auto 16px;
+    object-fit: cover;
+  }
+
+  a {
+    color: #00e1d4;
+  }
+
   p {
+    margin-bottom: 16px;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
     text-transform: capitalize;
     color: #303030;
+
+    a {
+      display: inline;
+      color: #00e1d4;
+    }
 
     @include m($lg) {
       font-size: 14px;
@@ -37,36 +76,9 @@
     }
   }
 
-  &__box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 16px 0;
-    height: 538px;
-    background-color: #2c2d30;
-
-    img {
-      @include m($lg) {
-        max-width: 168px;
-      }
-
-      @include m($md) {
-        max-width: 121px;
-      }
-    }
-
-    @include m($lg) {
-      height: 440px;
-    }
-
-    @include m($md) {
-      height: 349px;
-    }
-  }
-
-  a {
-    display: inline;
-    color: #00e1d4;
+  @include m($lg) {
+    font-size: 14px;
+    line-height: 20px;
   }
 
   @include m($lg) {
