--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -334,7 +334,7 @@ html {
   background-color: #000;
 }
 
-.swiper {
+#swiper-cat {
   position: relative;
 
   &::after {
@@ -347,35 +347,35 @@ html {
     height: 24px;
     background-image: linear-gradient(270deg, #000 0%, rgba(0, 0, 0, 0) 100%);
   }
-}
 
-.swiper-slide {
-  width: 24px !important;
-  height: 24px !important;
+  .swiper-slide {
+    width: 24px !important;
+    height: 24px !important;
 
-  a {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.12);
-    transition: all 0.3s;
+    a {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.12);
+      transition: all 0.3s;
 
-    &:hover {
-      background-color: #343434;
+      &:hover {
+        background-color: #343434;
 
-      img {
-        opacity: 1;
+        img {
+          opacity: 1;
+        }
       }
     }
-  }
 
-  img {
-    opacity: 0.3;
-    width: auto;
-    height: auto;
-    transition: all 0.3s;
+    img {
+      opacity: 0.3;
+      width: auto;
+      height: auto;
+      transition: all 0.3s;
+    }
   }
 }
