--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -131,14 +131,15 @@ html {
   margin: -117px auto 72px !important;
 
   h3 {
+    margin-top: 32px;
     margin-bottom: 16px !important;
 
-    &:last-of-type {
-      margin-top: 32px;
+    &:first-of-type {
+      margin-top: 0;
+    }
 
-      @include m($lg) {
-        margin-top: 24px;
-      }
+    @include m($lg) {
+      margin-top: 24px;
     }
   }
 
@@ -293,12 +294,8 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 16px;
   width: 100%;
-  height: 78px;
-  border: 1px solid #f6f9fc;
-  border-radius: 14px;
-  box-shadow: 0 17px 14px -10px rgba(0, 0, 0, 0.05);
+  height: 38px;
   background-color: #fff;
 
   h2 {
