--- a/scss/_create.scss
+++ b/scss/_create.scss
@@ -48,6 +48,11 @@
     }
   }
 
+  ol {
+    margin-bottom: 16px;
+    padding-left: 20px;
+  }
+
   img {
     margin: 0 auto 16px;
     object-fit: cover;
