--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -22,8 +22,8 @@
         position: relative;
         display: flex;
         align-items: center;
-        padding-left: 24px;
-        height: 50px;
+        padding: 16px 0 16px 24px;
+        height: 100%;
         border-radius: 8px;
         font-size: 16px;
         line-height: 21px;
