--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -450,7 +450,14 @@ html {
     }
   }
 
+  .swiper-wrapper {
+    left: 0;
+    margin-left: auto;
+  }
+
   .swiper-slide {
+    z-index: 20;
+    display: block;
     width: 24px !important;
     height: 24px !important;
 
